--- a/06_websocket/public/index.html
+++ b/06_websocket/public/index.html
@@ -9,7 +9,10 @@
         </head>
 
         <body>
-            Testing 
+            <input type="text" id="message_input">
+            <button onclick="send_message()">Send</button>
+            <p id="messages"></p>
+
         </body>
 
 
