--- a/10_fanuc_viewer/public/index.html
+++ b/10_fanuc_viewer/public/index.html
@@ -17,7 +17,7 @@
     </script>
 
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
-    <script type="module" src="client.js"></script>
+    <script type="module", src="client.js"></script>
 </body>
 
 
